# lmx

./: CMakeLists.txt  LMX100RELEASE.md  LMX101.md  Makefile.in  ProjectHome.md  RC1testing.md  TestSuite.md  aclocal.m4  configure  index.html  params.json
autom4te.cache/: output.1  traces.0
debug/: config.status
doc/en/: 00_main.dox
src/LMX/: lmx_base_iohb.h  lmx_base_selector.h  lmx_base_stopwatch.h  lmx_diff_configuration.h  lmx_diff_integrator_ab.h  lmx_diff_integrator_am.h  lmx_diff_integrator_base.h  lmx_diff_integrator_base_implicit.h  lmx_diff_integrator_bdf.h  lmx_diff_integrator_centraldiff.h  lmx_diff_integrator_newmark.h  lmx_diff_problem.h  lmx_diff_problem_double.h  lmx_diff_problem_first.h  lmx_diff_problem_first_second.h  lmx_diff_problem_second.h  lmx_except.h  lmx_linsolvers.h  lmx_linsolvers_cg.h  lmx_linsolvers_lapack.h  lmx_linsolvers_lu.h  lmx_linsolvers_superlu_interface.h  lmx_linsolvers_system.h  lmx_mat_data.h  lmx_mat_data_blas.h  lmx_mat_data_mat.h  lmx_mat_data_vec.h  lmx_mat_dense_matrix.h  lmx_mat_elem_ref.h  lmx_mat_matrix.h  lmx_mat_type_csc.h  lmx_mat_type_gmm.h  lmx_mat_type_gmm_sparse1.h  lmx_mat_type_gmmvector_sparse1.h  lmx_mat_type_stdmatrix.h  lmx_mat_type_stdvector.h  lmx_mat_vector.h  lmx_nlsolvers.h  lmx_nlsolvers_double.h
tags/LMX-1.0.beta4/: Doxyfile  Makefile.am  callgrind.cmd  configure.in  lmx.kdevelop  lmx.kdevelop.pcs
tags/LMX-1.0.beta4/tests/: .kdbgrc.test021  test002.cpp  test004.cpp  test006.cpp  test007.cpp  test008.cpp  test010.cpp  test012.cpp
tags/lmx-1.0.beta3/: authors  lmx.kdevelop.spec
tags/lmx-1.0.beta3/debug/: config.h  libtool
tags/lmx-1.0.beta3/src/: Makefile.in
tags/lmx-1.0.beta3/templates/: h
tests/: CMakeLists.txt  Makefile.in  ex01  ex01-deb  ex01.cpp  ex02  ex02.cpp  ex02.cpp.orig  matrix.tex  test001.cpp  test002.cpp  test002.cpp.orig  test003.cpp  test003.cpp.orig  test004.cpp  test004.cpp.orig  test005.cpp  test005.cpp.orig  test006.cpp  test006.cpp.old  test006.cpp.orig  test007.cpp  test008.cpp  test008.cpp.orig  test009.cpp  test010.cpp  test010.verified  test011.cpp  test012.cpp  test013.cpp  test013.verified  test014.cpp  test014.cpp.orig  test014.verified  test020.cpp  test020.verified  test022.cpp  test023.cpp
tests/gmm/: test001.cpp  test001.cpp.orig  test002.cpp
trunk/: configure.in  lmx.kdevses
trunk/autom4te.cache/: output.0  output.2  output.3  requests  traces.1  traces.2  traces.3
trunk/debug/: Makefile
trunk/tests/: ex01.cpp  latex.dvi  latex.tex  readme  test001.cpp  test004.cpp  test005.cpp  test006_old  test006_old.lastout  test008.verified  test011.cpp  test013.cpp  test021.cpp  test021.verified  test022.cpp  test023.cpp  test023.verified
wiki/: LMX100RELEASE.wiki  LMX101.wiki  RC1testing.wiki  TestSuite.wiki
(+21 files in other folders)
